--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,12 +12,16 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
-      - run: npm run build
+      - name: Clean install
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install
+      - name: Run build
+        run: npm run build
       - uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: dist # or your build output directory
+          path: dist
 
   publish-npm:
     needs: build
@@ -31,8 +35,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: dist # or your build output directory
-      - run: npm ci # you may not need this if you only need the built files.
+          path: dist
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
