--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "google-login-vue3",
   "version": "1.1.0",
   "type": "module",
-  "description": "A lightweight and customizable Vue 3 component for Google OAuth 2.0 code-based authentication.",
+  "description": "A lightweight and customizable Vue 3 component for Google OAuth 2.0 authentication, supporting both code-based and JWT-based authentication modes.",
   "main": "dist/google-login-vue3.umd.js",
   "module": "dist/google-login-vue3.es.js",
   "exports": {
